--- a/index.html
+++ b/index.html
@@ -5,12 +5,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Wallet App</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
 </head>
 
 <body>
-    <header>
-        My Wallet App
+    <header class="text-warning text-center display-5 my-4">
+        My Wallet App 💳
     </header>
+
+    <main class="container" style="max-width:800px">
+        <form id="harcama-formu" class="row g-3 p-3 border raounded-4 m-0">
+            <h4 class="text-center">Payment Form</h4>
+            <div class="col-6">
+                <label for="date" class="form-label">Date</label>
+                <input type="date" class="form-control" id="date" required />
+            </div>
+            <div class="col-6">
+                <label for="quantity" class="form-label">Payment Quantity</label>
+                <input type="number" class="form-control" id="quantity" placeholder="1000 €" s step="0.01" min="0"
+                    required />
+            </div>
+            <div class="col-12">
+                <label for="payment-area" class="form-label">Payment Area</label>
+                <input type="text" class="form-control" id="payment-area" placeholder="Rent, Bill, Credit Card"
+                    required>
+            </div>
+            <div class="col-12 text-center">
+                <button class="btn btn-danger">Kaydet</button>
+            </div>
+        </form>
+
+    </main>
 </body>
+
 
 </html>
