added table for the table of the reesult

--- a/index.html
+++ b/index.html
@@ -56,10 +56,30 @@
             <tbody id="payment-body">
 
             </tbody>
+        </table>
+        <table id="result-table" class="table table-bordered table-hover table-striped mt-4 text-center w-50 ms-auto">
+            <tbody class="text-end">
+                <tr>
+                    <th>Income(€)</th>
+                    <td id="income" style="width:100px">0</td>
+                </tr>
+                <tr>
+                    <th>Expenses(€)</th>
+                    <td id="expenses">0</td>
+                </tr>
+                <tr>
+                    <th id="remainingTh">Remaining (€):</th>
+                    <td id="remaing">0</td>
+                </tr>
+            </tbody>
 
         </table>
 
-
+        <section class="text-center">
+            <button class="btn btn-secondary">
+                Clear Info
+            </button>
+        </section>
     </main>
 </body>
 
