added functionaaality for income form

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
 
     <main class="container" style="max-width:800px">
-        <form id="harcama-formu" class="row g-3 p-3 border raounded-4 m-0">
+        <form id="payment-form" class="row g-3 p-3 border rounded-4 m-0">
             <h4 class="text-center">Payment Form</h4>
             <div class="col-6">
                 <label for="date" class="form-label">Date</label>
@@ -35,7 +35,7 @@
                     required>
             </div>
             <div class="col-12 text-center">
-                <button class="btn btn-danger">Kaydet</button>
+                <button id="save" class="btn btn-danger">Save</button>
             </div>
         </form>
         <br>
@@ -81,6 +81,7 @@
             </button>
         </section>
     </main>
+    <script src="app.js"></script>
 </body>
 
 
