added new function for calculate and then updaate

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </tr>
                 <tr>
                     <th id="remainingTh">Remaining (€):</th>
-                    <td id="remaing">0</td>
+                    <td id="remaining">0</td>
                 </tr>
             </tbody>
 
