--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </table>
 
         <section class="text-center">
-            <button class="btn btn-secondary">
+            <button id="clear-btn" class="btn btn-secondary">
                 Clear Info
             </button>
         </section>
